k8s/codecampster/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  codecampster-v2
  namespace: codecampster
  labels:
    name:  codecampster
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  codecampster
    spec:
      containers:
      - image:  nginx
        name:  codecampster
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        # livenessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 5000
        #   initialDelaySeconds: 90
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 5000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        ports:
        - containerPort:  80
          name:  http
      restartPolicy: OnFailure
      imagePullPolicy: IfNotPresent
