k8s/codecampster/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  codecampster-svc
spec:
  selector:
    app:  codecampster
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    targetPort:  80
