k8s/codecampster/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codecampster
  namespace: codecampster
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - prod-codecampster.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: prod-codecampster.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: codecampster-svc
          servicePort: 80
        path: /
